@@ -61,15 +61,15 @@ settings_import_description=Paste a plain JSON string or an encoded string.
 settings_back=Back
 settings_confirm=Confirm
 settings_alias=Alias
-settings_add_item=Add Item
-settings_add_fluid=Add Fluid
-settings_add_technology=Add Research
-settings_add_kill=Add Kill
-settings_add_group=Add Group
+settings_add_something=Add __1__
 settings_quantity_tooltip=Quantity
 settings_infinity_button_tooltip=Infinite milestone: Completing this milestone will create a new one with a higher quantity.
 settings_next_textfield_tooltip=Formula for the next milestone. Example: "x10" or "+5".
 settings_arrow_tooltip=__CONTROL_STYLE_BEGIN__Shift-click__CONTROL_STYLE_END__ to move 5 at a time.
+settings_checkbox_tooltip=Select to delete this milestone or to add a new milestone below it.\n__CONTROL_STYLE_BEGIN__Control-click__CONTROL_STYLE_END__ to select multiple, __CONTROL_STYLE_BEGIN__Shift-click__CONTROL_STYLE_END__ to select a range.
+settings_add_tooltip=Add a new __1__ milestone under the selected milestone.
+settings_add_group=Add a new group under the selected milestone.
+settings_delete_tooltip=Delete all selected milestones.
 
 message_loaded_presets=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] is using the auto-detected preset: [color=green]__1__[/color]. Change it in the settings (__CONTROL__milestones_toggle_gui__).
 message_loaded_initial_preset=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] successfully loaded the preset from Mod Settings.
