@@ -32,13 +32,14 @@ local function add_group(settings_flow, default_name, gui_index)
     local group_flow = settings_flow.add{type="flow", direction="horizontal", style="milestones_horizontal_flow_big_settings", index=gui_index}
     group_flow.add{type="sprite", sprite="milestones_icon_group", tooltip={"milestones.type_group"}}
     group_flow.add{type="label", name="milestones_settings_label", caption={"", {"milestones.type_group"}, ":"}}
-    local textfield = group_flow.add{type="textfield", name="milestones_settings_group_name", text=default_name, clear_and_focus_on_right_click=true}
+    group_flow.add{type="textfield", name="milestones_settings_group_name", text=default_name, clear_and_focus_on_right_click=true}
 
     group_flow.add{type="empty-widget", style="flib_horizontal_pusher"}
 
-    group_flow.add{type="sprite-button", sprite="utility/trash", style="milestones_trash_button", tags={action="milestones_delete_setting"}}
     group_flow.add{type="flow", name="milestones_arrows_flow", direction="vertical"}
-    return textfield
+    group_flow.add{type="checkbox", name="milestones_settings_checkbox", state=false,
+        tooltip={"milestones.settings_checkbox_tooltip"}, tags={action="milestones_select_setting"}}
+    return group_flow
 end
 
 
@@ -101,9 +102,9 @@ local function add_milestone_setting(milestone, settings_flow, gui_index)
         toggle_infinity_button(infinity_button)
     end
 
-    milestone_flow.add{type="sprite-button", sprite="utility/trash", style="milestones_trash_button", tags={action="milestones_delete_setting"}}
     milestone_flow.add{type="flow", name="milestones_arrows_flow", direction="vertical"}
-
+    milestone_flow.add{type="checkbox", name="milestones_settings_checkbox", state=false,
+        tooltip={"milestones.settings_checkbox_tooltip"}, tags={action="milestones_select_setting"}}
     return milestone_flow
 end
 
@@ -114,8 +115,9 @@ local function add_alias_setting(milestone, settings_flow, gui_index)
 
     milestone_flow.add({type="empty-widget", style="flib_horizontal_pusher"})
 
-    milestone_flow.add({type="sprite-button", sprite="utility/trash", style="milestones_trash_button", tags={action="milestones_delete_setting"}})
     milestone_flow.add({type="flow", name="milestones_arrows_flow", direction="vertical"})
+    milestone_flow.add{type="checkbox", name="milestones_settings_checkbox", state=false,
+        tooltip={"milestones.settings_checkbox_tooltip"}, tags={action="milestones_select_setting"}}
 end
 
 local function add_settings_element_from_json_item(settings_element, settings_flow, gui_index)
@@ -206,7 +208,7 @@ function build_settings_page(player)
     main_frame.milestones_dialog_buttons.visible = true
 
     local inner_frame = get_inner_frame(player.index)
-    local settings_outer_flow = inner_frame.add{type="flow", name="milestones_settings_flow", direction="vertical", style="milestones_settings_flow"}
+    local settings_outer_flow = inner_frame.add{type="flow", name="milestones_settings_outer_flow", direction="vertical", style="milestones_settings_outer_flow"}
 
     local preset_flow = settings_outer_flow.add{type="flow", name="milestones_preset_flow", direction="horizontal"}
     preset_flow.add{type="label", caption={"milestones.settings_preset"}, style="caption_label"}
@@ -237,15 +239,78 @@ function build_settings_page(player)
     local settings_scroll = settings_outer_flow.add{type="scroll-pane", name="milestones_settings_scroll", style="milestones_settings_scroll"}
     local settings_flow = settings_scroll.add{type="frame", name="milestones_settings_inner_flow", direction="vertical", style="milestones_deep_frame_in_shallow_frame"}
     global.players[player.index].settings_flow = settings_flow
+    global.players[player.index].settings_selection_indexes = {}
     fill_settings_flow(settings_flow, global.loaded_milestones)
 
-    local buttons_flow = settings_outer_flow.add{type="flow", direction="horizontal"}
+    local buttons_flow = settings_outer_flow.add{type="flow", name="milestones_button_flow", direction="horizontal"}
     for _, type in pairs({"group", "item", "fluid", "technology", "kill"}) do
-        buttons_flow.add{type="button",
-            caption={"", "[img=milestones_icon_"..type.."_black] ", {"milestones.settings_add_"..type}},
+        local tooltip = type == "group" and {"milestones.settings_add_group"} or {"milestones.settings_add_tooltip", {"milestones.type_"..type}}
+        buttons_flow.add{type="button", enabled=false, tooltip=tooltip,
+            caption={"", "[img=milestones_icon_"..type.."_black] ", {"milestones.settings_add_something", {"milestones.type_"..type}}},
             tags={action="milestones_add_setting", type=type}}
     end
+    settings_outer_flow.add{type="button", name="milestones_delete_settings_button",
+        enabled=false, style="red_button", tooltip={"milestones.settings_delete_tooltip"},
+        caption={"", "[img=utility/trash] ", {"gui.delete"}},
+        tags={action="milestones_delete_settings"}}
     get_outer_frame(player.index).force_auto_center()
+end
+
+local function update_checkbox_states(settings_flow, settings_selection_indexes)
+    local nb_children = #settings_flow.children
+    for i = 1, nb_children, 2 do -- 2, because we skip line separators
+        settings_flow.children[i].milestones_settings_checkbox.state = settings_selection_indexes[i] or false
+    end
+end
+
+local function update_buttons_enabled_state(settings_outer_flow, settings_selection_indexes)
+    local enabled = table_size(settings_selection_indexes) > 0 or #settings_outer_flow.milestones_settings_scroll.milestones_settings_inner_flow.children == 0
+    for _, button in pairs(settings_outer_flow.milestones_button_flow.children) do
+        button.enabled = enabled
+    end
+    settings_outer_flow.milestones_delete_settings_button.enabled = enabled
+end
+
+function select_setting(event)
+    local global_player = global.players[event.player_index]
+    local checkbox_element = event.element
+    local index = checkbox_element.parent.get_index_in_parent()
+
+    if checkbox_element.state then -- The element state was already flipped at this point
+        if event.shift and table_size(global_player.settings_selection_indexes) > 0 then
+            -- Shift-selection, update the range, update selections
+            local first_selected
+            local last_selected
+            for i, checked in pairs(global_player.settings_selection_indexes) do
+                if checked then
+                    if not first_selected then first_selected = i end
+                    last_selected = i
+                end
+            end
+            if index < first_selected then
+                for i = index, first_selected - 2, 2 do
+                    global_player.settings_selection_indexes[i] = true
+                end
+            elseif index > last_selected then
+                for i = last_selected + 2, index, 2 do
+                    global_player.settings_selection_indexes[i] = true
+                end
+            else
+                global_player.settings_selection_indexes[index] = true
+            end
+        elseif event.control then
+            -- Additive selection
+            global_player.settings_selection_indexes[index] = true
+        else
+            -- Normal selection, deselect all others
+            global_player.settings_selection_indexes = {}
+            global_player.settings_selection_indexes[index] = true
+        end
+    else
+        global_player.settings_selection_indexes[index] = nil
+    end
+    update_checkbox_states(global_player.settings_flow, global_player.settings_selection_indexes)
+    update_buttons_enabled_state(global_player.settings_flow.parent.parent, global_player.settings_selection_indexes)
 end
 
 function swap_settings(player_index, event)
@@ -267,38 +332,59 @@ function swap_settings(player_index, event)
     refresh_arrow_buttons(gui_index2, settings_flow)
 end
 
-function delete_setting(player_index, button_element)
-    gui_index = button_element.parent.get_index_in_parent()
-    button_element.parent.destroy()
-
-    local milestones_flow = global.players[player_index].settings_flow
-    if #milestones_flow.children ~= 0 then
-        -- If this is the first element, we have to delete the line AFTER the element
-        -- The line AFTER will be index 1 once the element is destroyed
-        line_gui_index = (gui_index == 1) and 1 or gui_index - 1
-        milestones_flow.children[line_gui_index].destroy()
-        -- Update arrows of new first or last element
-        update_arrows_element_index = (gui_index == 1) and 1 or #milestones_flow.children
-        refresh_arrow_buttons(update_arrows_element_index, milestones_flow)
+function delete_selected_settings(player_index)
+    local global_player = global.players[player_index]
+    local settings_flow = global_player.settings_flow
+    local inverted_indexes = {}
+    for gui_index, _ in pairs(global_player.settings_selection_indexes) do
+        table.insert(inverted_indexes, 1, gui_index)
     end
+    for _, gui_index in pairs(inverted_indexes) do
+        settings_flow.children[gui_index].destroy()
+        if #settings_flow.children > 0 then
+            -- If this is the first element, we have to delete the line AFTER the element
+            -- The line AFTER will be index 1 once the element is destroyed
+            local line_gui_index = (gui_index == 1) and 1 or gui_index - 1
+            settings_flow.children[line_gui_index].destroy()
+        end
+    end
+    -- Update arrows of the potentially new first and last element
+    if #settings_flow.children >= 1 then
+        refresh_arrow_buttons(1, settings_flow)
+    end
+    if #settings_flow.children >= 2 then
+        refresh_arrow_buttons(#settings_flow.children, settings_flow)
+    end
+
+    global_player.settings_selection_indexes = {}
 end
 
 function add_setting(player_index, button_element)
+    local global_player = global.players[player_index]
+    local settings_flow = global_player.settings_flow
     local milestone_type = button_element.tags.type
-    local settings_flow = global.players[player_index].settings_flow
 
-    local previous_last_element_index = #settings_flow.children
-    local only_element = previous_last_element_index == 0
-    local new_element_index = previous_last_element_index + (only_element and 1 or 2) -- No line if we are adding the 1st element
+    -- Find last selected element
+    local last_selected_element_index = 0
+    for i = #settings_flow.children, 1, -2 do
+        if global_player.settings_selection_indexes[i] then
+            last_selected_element_index = i
+            break
+        end
+    end
+    local only_element = last_selected_element_index == 0
+    local insert_at_index = last_selected_element_index + 1
 
     if not only_element then
-        settings_flow.add{type="line"}
+        settings_flow.add({type="line", index = insert_at_index})
+        insert_at_index = insert_at_index + 1
     end
 
+    local new_flow
     if milestone_type == "group" then
         local group_name = "Group " -- Can't localize default textfield values
         local group_digit = 1
-        for i = previous_last_element_index, 1, -1 do
+        for i = last_selected_element_index, 1, -1 do
             local child = settings_flow.children[i]
             if child.type == "flow" and child.milestones_settings_group_name then
                 local previous_group_name = child.milestones_settings_group_name.text
@@ -311,21 +397,23 @@ function add_setting(player_index, button_element)
             end
         end
         group_name = group_name .. group_digit
-        local textfield = add_group(settings_flow, group_name)
-        textfield.focus()
-        textfield.select_all()
+        new_flow = add_group(settings_flow, group_name, insert_at_index)
+        new_flow.milestones_settings_group_name.focus()
+        new_flow.milestones_settings_group_name.select_all()
     else
         local milestone = {type=milestone_type, quantity=1}
-        add_milestone_setting(milestone, settings_flow, new_element_index)
+        new_flow = add_milestone_setting(milestone, settings_flow, insert_at_index)
     end
-    refresh_arrow_buttons(new_element_index, settings_flow)
+    refresh_arrow_buttons(insert_at_index, settings_flow)
 
-    if not only_element then
-        refresh_arrow_buttons(previous_last_element_index, settings_flow)
+    if only_element then
+        update_buttons_enabled_state(settings_flow.parent.parent, global_player.settings_selection_indexes)
+    else
+         refresh_arrow_buttons(last_selected_element_index, settings_flow)
     end
 
     local inner_frame = get_inner_frame(player_index)
-    inner_frame.milestones_settings_scroll.scroll_to_bottom()
+    inner_frame.milestones_settings_outer_flow.milestones_settings_scroll.scroll_to_element(new_flow)
 end
 
 function cancel_settings_page(player_index)
@@ -353,7 +441,7 @@ function confirm_settings_page(player_index)
 
     if not table.deep_compare(global.loaded_milestones, new_loaded_milestones) then -- If something changed
         local inner_frame = get_inner_frame(player_index)
-        local preset_dropdown = inner_frame.milestones_preset_flow.milestones_preset_dropdown
+        local preset_dropdown = inner_frame.milestones_settings_outer_flow.milestones_preset_flow.milestones_preset_dropdown
         if preset_dropdown.tags.imported then
             global.current_preset_name = "Imported"
         else
