@@ -6,7 +6,9 @@ Date: ????
     - GUI improvements:
       - Milestones from different groups are now aligned properly.
       - Improve the look of the scroll bars that appear when using large milestones set.
-      - You can now shift-click arrows on the settings page to move 5 places at a time.
+      - In the settings page, you can now add milestones directly at a specific position.
+      - In the settings page, you can now delete multiple milestones at the same time.
+      - In the settings page, you can now shift-click arrows to move 5 places at a time.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.9
